style(App): fix margin on smaller screens

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -120,5 +120,6 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
     max-width: 120rem;
+    gap: 3rem;
   }
 }
